# yaku

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml   .swcrc  BUILD  DEVELOPMENT.md  MODULE.bazel  README.md  WORKSPACE  biome.json  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
onyx/: .commitlintrc.yaml  .gitignore  .golangci.yml  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  goreleaser.yml  onyx.yaml
onyx/.github/workflows/: build-and-run-test-base.yml  merge-check.yml  pr-check.yml
onyx/cmd/cli/: BUILD.bazel  main.go
onyx/cmd/cli/exec/: BUILD.bazel  exec.go  exec_int_test.go
onyx/cmd/cli/migrate/: BUILD.bazel  migrate.go  migrate_int_test.go
onyx/cmd/cli/schema/: BUILD.bazel  schema.go  schema_int_test.go
onyx/internal/onyx/common/: BUILD.bazel  common.go
onyx/internal/onyx/exec/: BUILD.bazel  exec.go  exec_int_test.go  exec_test.go  initialize_repository.go  read_files.go  read_files_test.go
onyx/internal/onyx/migrate/: BUILD.bazel  migrate.go  migrate_test.go
onyx/internal/onyx/schema/: BUILD.bazel  schema.go  schema_test.go
onyx/pkg/configuration/: BUILD.bazel  config.go  config_test.go
onyx/pkg/executor/: BUILD.bazel  autopilot.go  autopilot_int_test.go  autopilot_test.go  executor.go  executor_test.go  finalizer.go  finalizer_int_test.go  finalizer_test.go  manual.go  manual_int_test.go  manual_test.go
onyx/pkg/executor/testdata/: env.golden  secrets.golden  vars.golden
onyx/pkg/finalize/: BUILD.bazel  engine.go  engine_int_test.go
onyx/pkg/helper/: BUILD.bazel  compare.go  helper.go  helper_test.go  hide_secrets.go  hide_secrets_test.go  log_test.go  parse.go  parse_test.go  test.go
onyx/pkg/item/: BUILD.bazel  engine.go  engine_int_test.go  engine_test.go
onyx/pkg/logger/: BUILD.bazel  autopilot.go  autopilot_test.go  common.go  common_test.go  helper.go  helper_test.go  logger.go  logger_int_test.go  logger_test.go  old_logger.go
onyx/pkg/parameter/: BUILD.bazel  parameter.go
onyx/pkg/reader/: BUILD.bazel  file.go  file_int_test.go  file_test.go
onyx/pkg/reader/testdata/: config.yaml  vars.json
onyx/pkg/replacer/: BUILD.bazel  errors.go  helper.go  helper_test.go  replacer.go  replacer_test.go
onyx/pkg/repository/: BUILD.bazel  repository.go  repository_test.go
onyx/pkg/repository/app/: BUILD.bazel  app.go  app_test.go  binary-app.go  binary_app_test.go
onyx/pkg/repository/registry/: BUILD.bazel  registry.go  registry_int_test.go  registry_test.go
onyx/pkg/result/: BUILD.bazel  engine.go  engine_test.go  helper_test.go  result.go  result_int_test.go
onyx/pkg/result/common/: BUILD.bazel  common.go
onyx/pkg/result/testdata/: result-with-finalizer.golden  result.golden
onyx/pkg/result/v1/: BUILD.bazel  result.go
onyx/pkg/runner/: BUILD.bazel  runner.go  runner_int_test.go  runner_test.go  subprocess.go  subprocess_test.go
onyx/pkg/schema/: BUILD.bazel  schema.go  schema_int_test.go  schema_test.go
onyx/pkg/schema/testdata/: schema.golden
onyx/pkg/tempdir/: BUILD.bazel  tempdir.go
onyx/pkg/transformer/: BUILD.bazel  load_configs.go  load_configs_test.go  skip_autopilots.go  skip_autopilots_test.go  transform.go  transform_int_test.go
onyx/pkg/transformer/testdata/: config.yaml
onyx/pkg/v2/config/: BUILD.bazel  config.go  config_test.go  graph.go  graph_test.go  mapper.go  validate.go  validate_test.go
onyx/pkg/v2/executor/: BUILD.bazel  autopilotcheck.go  autopilotcheck_test.go  executor.go  executor_test.go  finalize.go  finalize_test.go  manualcheck.go  manualcheck_test.go
onyx/pkg/v2/model/: BUILD.bazel  autopilotcheck.go  config.go  error.go  finalize.go  manualcheck.go  run.go
onyx/pkg/v2/orchestrator/: BUILD.bazel  orchestrator.go  orchestrator_test.go
onyx/pkg/v2/output/: BUILD.bazel  output.go  output_test.go
onyx/pkg/v2/replacer/: BUILD.bazel  replacer.go  replacer_test.go
onyx/pkg/v2/result/: BUILD.bazel  creator.go  creator_create_test.go  creator_test.go  result.go
onyx/pkg/v2/runner/: BUILD.bazel  runner.go  runner_int_test.go  runner_test.go  subprocess.go  subprocess_test.go
onyx/pkg/v2/transformer/: BUILD.bazel  load_configs.go  load_configs_test.go  skip_autopilots.go  skip_autopilots_test.go  transform.go  transform_int_test.go
onyx/pkg/workdir/: BUILD.bazel  copy.go  copy_test.go  create.go  create_test.go  link.go  link_test.go  modify.go  modify_test.go  workdir.go  workdir_int_test.go
onyx/pkg/zip/: BUILD.bazel  helper_test.go  zip.go  zip_int_test.go  zip_test.go
yaku-apps-python/: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Makefile  README.md  mypy.ini  pants.ci.toml  pants.toml  pyproject.toml
yaku-apps-python/apps/artifactory-fetcher/: .env.sample  BUILD  BUILD.bazel  README.md
yaku-apps-python/apps/artifactory-fetcher/tests/: BUILD  test_artifactory_fetcher.py  test_cli.py  test_main.py
yaku-apps-python/apps/artifactory-fetcher/tests-pex/: BUILD  test_pex.py
yaku-apps-python/apps/excel-tools/: BUILD  BUILD.bazel  README.md
yaku-apps-python/apps/filecheck/: BUILD  BUILD.bazel
yaku-apps-python/apps/papsr/: BUILD  BUILD.bazel
yaku-apps-python/apps/pdf-signature-evaluator/: BUILD  BUILD.bazel  README.md  env.sample  pyproject.toml
yaku-apps-python/apps/pex-tool/: BUILD  BUILD.bazel
yaku-apps-python/apps/security-scanner/: BUILD  BUILD.bazel  README.md  env.sample
yaku-apps-python/apps/sharepoint/: BUILD  BUILD.bazel  README.md  pyproject.toml
yaku-apps-python/apps/sharepoint-evaluator/: BUILD  BUILD.bazel  README.md  env.sample  pyproject.toml
yaku-apps-python/apps/sharepoint-fetcher/: BUILD  BUILD.bazel  README.md
yaku-apps-python/apps/splunk-fetcher/: BUILD  BUILD.bazel  README.md  env.sample  pyproject.toml
yaku-apps-python/cicd/: check-release-workflow.py  check-vscode-python-paths.py  coverage-check.sh  get-app-changes.sh  pex-tool  semver.metadata
yaku-apps-python/pants-plugins/: BUILD
yaku-apps-python/pants-plugins/python-utils/: register.py
(+2587 files in other folders)
