# exclude because on MAC, if I update the requirements lock file, this test fails

#load("@rules_python//python:pip.bzl", "compile_pip_requirements")
#
#compile_pip_requirements(
#    # base name for generated targets, typically "requirements"
#    name = "requirements",
#    requirements_in = ":3rdparty/requirements.txt",
#    requirements_txt = ":3rdparty/requirements_lock.txt",
#)
