load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/B-S-F/yaku/onyx/cmd/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/cli/exec",
        "//cmd/cli/migrate",
        "//cmd/cli/schema",
        "//pkg/helper",
        "//pkg/logger",
        "//pkg/v2/model",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
