load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "executor",
    srcs = [
        "autopilot.go",
        "executor.go",
        "finalizer.go",
        "manual.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/executor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configuration",
        "//pkg/helper",
        "//pkg/logger",
        "//pkg/runner",
        "//pkg/workdir",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_afero//:afero",
        "@org_uber_go_zap//:zap",
    ],
)
