load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "executor",
    srcs = [
        "autopilot.go",
        "executor.go",
        "finalizer.go",
        "manual.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/executor",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/pkg/configuration",
        "//onyx/pkg/helper",
        "//onyx/pkg/logger",
        "//onyx/pkg/runner",
        "//onyx/pkg/workdir",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
