load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "finalize",
    srcs = ["engine.go"],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/finalize",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configuration",
        "//pkg/executor",
        "//pkg/logger",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)
