load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "helper",
    srcs = [
        "compare.go",
        "helper.go",
        "hide_secrets.go",
        "parse.go",
        "test.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/helper",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)

go_test(
    name = "helper_test",
    srcs = ["hide_secrets_test.go"],
    embed = [":helper"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
