load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = [
        "autopilot.go",
        "common.go",
        "helper.go",
        "logger.go",
        "old_logger.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/helper",
        "//pkg/v2/model",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_natefinch_lumberjack_v2//:lumberjack_v2",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
