load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = [
        "autopilot.go",
        "common.go",
        "helper.go",
        "logger.go",
        "old_logger.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/helper",
        "//pkg/v2/model",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@in_gopkg_natefinch_lumberjack_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
