load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "reader",
    srcs = ["file.go"],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/reader",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
