load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "replacer",
    srcs = [
        "errors.go",
        "helper.go",
        "replacer.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/replacer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configuration",
        "//pkg/helper",
        "//pkg/logger",
        "@com_github_pkg_errors//:errors",
    ],
)
