load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "replacer",
    srcs = [
        "errors.go",
        "helper.go",
        "replacer.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/replacer",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/pkg/configuration",
        "//onyx/pkg/helper",
        "//onyx/pkg/logger",
        "//onyx/pkg/v2/model",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
