load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = ["repository.go"],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/pkg/repository/app",
        "//onyx/pkg/tempdir",
    ],
)

go_test(
    name = "repository_test",
    srcs = ["repository_test.go"],
    embed = [":repository"],
    deps = [
        "//onyx/pkg/repository/app",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
