load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "result",
    srcs = [
        "engine.go",
        "result.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/result",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/pkg/configuration",
        "//onyx/pkg/executor",
        "//onyx/pkg/helper",
        "//onyx/pkg/item",
        "//onyx/pkg/logger",
        "//onyx/pkg/result/common",
        "//onyx/pkg/result/v1:result",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "result_test",
    srcs = ["helper_test.go"],
    data = glob(["testdata/**"]),
    embed = [":result"],
    deps = [
        "//onyx/pkg/result/v1:result",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
