load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner",
    srcs = [
        "runner.go",
        "subprocess.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/helper",
        "//pkg/logger",
        "@org_uber_go_zap//:go_default_library",
    ],
)
