load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = ["schema.go"],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/pkg/logger",
        "//onyx/pkg/replacer",
        "//onyx/pkg/v2/model",
        "@com_github_invopop_jsonschema//:go_default_library",
        "@com_github_invopop_yaml//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_xeipuuv_gojsonschema//:go_default_library",
    ],
)
