load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "transformer",
    srcs = [
        "load_configs.go",
        "skip_autopilots.go",
        "transform.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/transformer",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/pkg/configuration",
        "//onyx/pkg/logger",
        "//onyx/pkg/parameter",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
