load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "workdir",
    srcs = [
        "copy.go",
        "create.go",
        "link.go",
        "modify.go",
        "workdir.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/workdir",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@com_github_chigopher_pathlib//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "workdir_test",
    srcs = ["modify_test.go"],
    data = glob(["testdata/**"]),
    embed = [":workdir"],
    deps = [
        "@com_github_chigopher_pathlib//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
