load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "workdir",
    srcs = [
        "copy.go",
        "create.go",
        "link.go",
        "modify.go",
        "workdir.go",
    ],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/workdir",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@com_github_chigopher_pathlib//:pathlib",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_afero//:afero",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "workdir_test",
    srcs = ["modify_test.go"],
    data = glob(["testdata/**"]),
    embed = [":workdir"],
    deps = [
        "@com_github_chigopher_pathlib//:pathlib",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
    ],
)
