load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "zip",
    srcs = ["zip.go"],
    importpath = "github.com/B-S-F/yaku/onyx/pkg/zip",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@com_github_spf13_afero//:afero",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "zip_test",
    srcs = ["helper_test.go"],
    data = glob(["testdata/**"]),
    embed = [":zip"],
)
