load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("//tools/pytest-runner:defs.bzl", "py_pytest_test")

py_binary(
    name = "artifactory-fetcher",
    srcs = glob(["src/**/*.py"]) + ["src/yaku/artifactory_fetcher/_version.txt"],
    imports = ["src"],
    main = "src/yaku/artifactory_fetcher/__main__.py",
    deps = [
        "//yaku-apps-python/packages/autopilot-utils:lib",
    ],
)

py_pytest_test(
    name = "test",
    srcs = glob(["tests/*.py"]),
    deps = [
        ":artifactory-fetcher",
        "@pip//mock",
        "@pip//pytest_mock",
    ],
)

py_pytest_test(
    name = "test-bin",
    srcs = glob(["tests-pex/*.py"]),
    deps = [
        ":artifactory-fetcher",
    ],
)
