load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("//tools/pytest-runner:defs.bzl", "py_pytest_test")

PKG = "excel_tools"

py_binary(
    name = "excel-tools",
    srcs = glob(["src/**/*.py"]) + ["src/yaku/" + PKG + "/_version.txt"],
    imports = ["src"],
    main = "src/yaku/" + PKG + "/__main__.py",
    deps = [
        "//yaku-apps-python/packages/autopilot-utils:lib",
        "@pip//openpyxl",
        "@pip//pandas",
    ],
)

py_pytest_test(
    name = "test",
    srcs = glob(["tests/*.py"]),
    deps = [
        ":excel-tools",
        "@pip//mock",
        "@pip//pytest_mock",
    ],
)

py_pytest_test(
    name = "test-bin",
    srcs = glob(["tests-pex/*.py"]),
    deps = [
        ":excel-tools",
    ],
)
