load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("//tools/pytest-runner:defs.bzl", "py_pytest_test")

PKG = "pdf_signature_evaluator"

py_binary(
    name = "pdf-signature-evaluator",
    srcs = glob(["src/**/*.py"]) + ["src/yaku/" + PKG + "/_version.txt"],
    imports = ["src"],
    main = "src/yaku/" + PKG + "/__main__.py",
    deps = [
        "//yaku-apps-python/packages/autopilot-utils:lib",
        "@pip//asn1crypto",
        "@pip//pyhanko",
        "@pip//pytz",
        "@pip//pyyaml",
    ],
)

py_pytest_test(
    name = "test",
    srcs = glob(["tests/*.py"]),
    deps = [
        ":pdf-signature-evaluator",
        "@pip//mock",
        "@pip//pytest_mock",
    ],
)
