load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
load("//tools/pytest-runner:defs.bzl", "py_pytest_test")

NAME = "sharepoint"

PKG = "sharepoint"

py_binary(
    name = NAME,
    srcs = glob(["src/**/*.py"]) + ["src/yaku/" + PKG + "/_version.txt"],
    imports = ["src"],
    main = "src/yaku/" + PKG + "/__main__.py",
    deps = [
        "//yaku-apps-python/packages/autopilot-utils:lib",
        "@pip//click",
        "@pip//pydantic",
        "@pip//requests",
        "@pip//requests_ntlm",
    ],
)

py_pytest_test(
    name = "test",
    srcs = glob(["tests/*.py"]),
    deps = [
        ":" + NAME,
        "@pip//mock",
        "@pip//pytest_mock",
        "@pip//requests_mock",
    ],
)

py_pytest_test(
    name = "test-bin",
    srcs = glob(["tests-pex/*.py"]),
    deps = [
        ":" + NAME,
    ],
)
