load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = ["migrate.go"],
    importpath = "github.com/B-S-F/yaku/onyx/cmd/cli/migrate",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/onyx/migrate",
        "//pkg/logger",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
