load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = ["migrate.go"],
    importpath = "github.com/B-S-F/yaku/onyx/cmd/cli/migrate",
    visibility = ["//visibility:public"],
    deps = [
        "//onyx/internal/onyx/migrate",
        "//onyx/pkg/logger",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
