load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = ["schema.go"],
    importpath = "github.com/B-S-F/yaku/onyx/cmd/cli/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/onyx/schema",
        "//pkg/logger",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
