load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["common.go"],
    importpath = "github.com/B-S-F/yaku/onyx/internal/onyx/common",
    visibility = ["//:__subpackages__"],
    deps = [
        "//onyx/pkg/configuration",
        "//onyx/pkg/configuration/versions/v0:versions",
        "//onyx/pkg/configuration/versions/v1:versions",
        "//onyx/pkg/logger",
        "//onyx/pkg/v2/config",
        "//onyx/pkg/v2/model",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)
